# Intro_To_Python

./: README.md  pyproject.toml
extra/: a.txt  data.csv  extra.ipynb
getting_started/: Prac.ipynb  game_data.py  games.ipynb  getting_started.ipynb
learn python with me/: Prac.ipynb  classes.ipynb  games.ipynb
